Bug 237665 - dolphin displays versioned svn icons in case server is not reachable
Summary: dolphin displays versioned svn icons in case server is not reachable
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Fedora RPMs Unspecified
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2010-05-14 21:18 UTC by Felix Möller
Modified: 2011-01-09 14:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Möller 2010-05-14 21:18:36 UTC
Version:            (using KDE 4.4.3)
Installed from:    Fedora RPMs

I have a svn repository which is not reachable anymore (i.e. the server is offline)

As seen in <http://websvn.kde.org/branches/KDE/4.4/kdebase/apps/dolphin/src/versioncontrol/fileviewsvnplugin.cpp> dolphin does "svn status --show-updates --no-ignore" this requires internet access and a running server for the show-updates.

[fm@thinkpad ios]$ LANG=C svn status --show-updates --no-ignore
svn: Can't connect to host 'privatvermietung-kiel.de': Connection refused

Either dolphin should show some broken sign. Or the --show-updates should be removed in case of a not reachable server, this would expose all local information.

regards
Comment 1 Sebastian Dörner 2011-01-09 13:53:16 UTC
SVN commit 1213176 by doerner:

Catch failed "svn status --show-updates". Disable the "Show SVN Updates" option, try again and print an info message.

CCBUG: 237665

 M  +13 -0     fileviewsvnplugin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1213176
Comment 2 Sebastian Dörner 2011-01-09 14:28:39 UTC
SVN commit 1213184 by doerner:

Backport of commit 1213176. Exclude the info message due to string freeze.

BUG: 237665
FIXED-IN: 4.6.0


 M  +13 -0     fileviewsvnplugin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1213184