Backport of commit 1213176. Exclude the info message due to string freeze.

BUG: 237665
FIXED-IN: 4.6.0

svn path=/branches/KDE/4.6/kdesdk/dolphin-plugins/; revision=1213184